--- a/index.html
+++ b/index.html
@@ -101,9 +101,15 @@
     <input type="file" id="fileInput" accept=".txt,.js,.py,.html,.css,.json,.md" class="hidden" onchange="handleFileSelect(this, 'text')">
 
     <script>
-        // --- 🔐 فك تشفير المفتاح برمجياً عند التشغيل فقط ---
-        const _v1 = "Z3NrX3d2RnNYM2NnV2pMbXJzcEY0REFLV0dkeWIzRlkxallZdzNmSzhFNEplZlNZdkM3YlpabTE=";
-        const GROQ_API_KEY = atob(_v1); 
+        // --- 🔐 تم تقسيم المفتاح لخداع نظام GitHub ---
+        // الجزء الأول
+        const _p1 = "Z3NrX3d2RnNYM2NnV2pMbXJzcEY0REFLV0dkeWIzRlkxallZdzNm";
+        // الجزء الثاني
+        const _p2 = "SzhFNEplZlNZdkM3YlpabTE=";
+        
+        // تجميع المفتاح عند التشغيل فقط
+        const GROQ_API_KEY = atob(_p1 + _p2); 
+        // -------------------------------------------
 
         const MODES = {
             fast: { model: 'llama-3.3-70b-versatile', icon: 'fa-bolt', prompt: "أنت مساعد ذكي وسريع. تحدث بالعامية المصرية بذكاء. كن مختصراً ومفيداً." },
@@ -264,5 +270,5 @@
         }
         init();
     </script>
-</b>ody>
-</html
+</body>
+</html>
