--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div id="welcomeScreen" class="absolute inset-0 flex flex-col items-center justify-center text-center p-6 transition-opacity pointer-events-none">
             <img src="https://i.postimg.cc/sg2WkBVQ/5792048219872234554-(1).jpg" class="w-24 h-24 rounded-full border-4 border-white dark:border-brand-card shadow-2xl mb-4">
             <h2 class="text-3xl font-bold mb-2 text-gradient">Ai SciVerse <span class="text-xs text-gray-500">Groq Edition</span></h2>
-            <p class="text-gray-500 dark:text-gray-400 text-sm">أهلاً بك في أسرع تجربة ذكاء اصطناعي. جرب كتابة أي شيء!</p>
+            <p class="text-gray-500 dark:text-gray-400 text-sm">إهداء لطلاب كلية العلوم - جامعة القاهرة ❤️ | اسأل في أي مادة!</p>
         </div>
         <div id="chatContainer" class="flex-1 overflow-y-auto p-4 space-y-6 z-10 scroll-smooth"></div>
 
@@ -111,10 +111,37 @@
         const GROQ_API_KEY = atob(_p1 + _p2); 
         // -------------------------------------------
 
-        const MODES = {
-            fast: { model: 'llama-3.3-70b-versatile', icon: 'fa-bolt', prompt: "أنت مساعد ذكي وسريع. تحدث بالعامية المصرية بذكاء. كن مختصراً ومفيداً." },
-            expert: { model: 'llama-3.3-70b-versatile', icon: 'fa-brain', prompt: "أنت خبير استشاري محترف. قم بتحليل الطلب بعمق وقدم إجابات دقيقة ومنظمة جداً." },
-            education: { model: 'llama-3.3-70b-versatile', icon: 'fa-graduation-cap', prompt: "أنت معلم صبور. اشرح بأسلوب تعليمي مبسط مع أمثلة واضحة." }
+    // --- 🎓 تعديل: تم إضافة معلومات كلية العلوم جامعة القاهرة ---
+    const MODES = {
+            fast: { 
+                model: 'llama-3.3-70b-versatile', 
+                icon: 'fa-bolt', 
+                prompt: `
+                أنت مساعد ذكي مخصص لطلاب "كلية العلوم - جامعة القاهرة".
+                - هدفك: مساعدة الطلاب في شرح المواد، حل المسائل، ترجمة المصطلحات العلمية، وتلخيص المحاضرات.
+                - أسلوبك: اتكلم بلهجة مصرية ودودة ومحترمة (زي المعيد الشاطر اللي بيحب يساعد).
+                - معلوماتك: أنت عارف إن الكلية فيها أقسام زي (الكيمياء، الفيزياء، الرياضيات، علم الحيوان (Zoology)، علم النبات (Botany)، الحشرات (Entomology)، الجيولوجيا، الفلك، الحاسب الآلي، والبيوفيزياء).
+                - في الشرح: لما تشرح أي نقطة علمية، حاول تربطها بتطبيقات عملية وبسط المعلومة.
+                ` 
+            },
+            expert: { 
+                model: 'llama-3.3-70b-versatile', 
+                icon: 'fa-brain', 
+                prompt: `
+                أنت بروفيسور وخبير استشاري لطلاب كلية العلوم جامعة القاهرة.
+                - مهمتك: التحليل العميق للأبحاث العلمية، المساعدة في كتابة الـ Reports، وشرح النظريات المعقدة في (الفيزياء الكمية، العضوية، الجينات، التفاضل والتكامل، وغيرها).
+                - الأسلوب: دقيق جداً، أكاديمي، ومنظم. قدم الإجابة في نقاط واضحة مع ذكر المصادر العلمية إن أمكن.
+                ` 
+            },
+            education: { 
+                model: 'llama-3.3-70b-versatile', 
+                icon: 'fa-graduation-cap', 
+                prompt: `
+                أنت المعلم الخصوصي لطلاب سنة أولى وتانية علوم القاهرة.
+                - مهمتك: تبسيط المواد الأساسية (General Chemistry, General Physics, Calculus, Biology).
+                - الطريقة: اشرح كأنك بتشرح لطالب لسه بادئ، استخدم أمثلة من الحياة اليومية، واشرح الخطوات واحدة واحدة. لو الطالب سأل عن مصطلح، اكتبه بالإنجليزي وشرحه بالعربي.
+                ` 
+            }
         };
 
         let state = { mode: 'fast', chatHistory: JSON.parse(localStorage.getItem('sciverse_chats')) || [], currentSessionId: Date.now().toString(), messages: [], attachment: null, isGenerating: false };
